--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,8 +35,22 @@
         android:visibility="invisible"
         tools:ignore="HardcodedText"
 
-
         />
 
+    <ImageView
+        android:id="@+id/imgAddQuestion"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:clickable="true"
+        android:contentDescription="@string/Add_question"
+        android:focusable="true"
+        android:src="@drawable/plus_svgrepo_com"
+        tools:ignore="OnClick,SpeakableTextPresentCheck"
+
+        />
 
 </RelativeLayout>
